Add new recipe page and update links on homepage

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html" target="_blank" rel="noopener norefferer">
-            Lasagna
-        </a>
+        <p><a href="./recipes/lasagna.html">Lasagna</a></p>
+        <p><a href="./recipes/choc_almond_breakfast_donuts.html">Choc Almond Breakfast Donuts</a></p>
     </body>
 </html>
