Add recipe page for banana bread and link to index

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <h1>Odin Recipes</h1>
         <p><a href="./recipes/lasagna.html">Lasagna</a></p>
         <p><a href="./recipes/choc_almond_breakfast_donuts.html">Choc Almond Breakfast Donuts</a></p>
+        <p><a href="./recipes/banana_bread.html">Banana Bread</a></p>
     </body>
 </html>
