Add alt attribute to img tags in recipe html files

--- a/recipes/banana_bread.html
+++ b/recipes/banana_bread.html
@@ -9,7 +9,7 @@
     <!-- Content from: https://www.allrecipes.com/recipe/7116/banana-bread-quick-bread-for-machines/ -->
     <h1>Banana Bread</h1>
     <p><a href="https://www.allrecipes.com/recipe/7116/banana-bread-quick-bread-for-machines/" target="_blank" rel="noopener norefferer">original recipe content here</a> - credit to Dee for original recipe</p>
-    <img src="https://www.allrecipes.com/thmb/8Qrs-1hBmHT11lw8O4tmQ7TC61g=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/702431-812b35f5673c4d45af4e315783760ec6.jpg" width="500">
+    <img src="https://www.allrecipes.com/thmb/8Qrs-1hBmHT11lw8O4tmQ7TC61g=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/702431-812b35f5673c4d45af4e315783760ec6.jpg" width="500" alt="freshly cooked banana bread with a slice cut to eat">
     <h2>Description</h2>
     <p>
         This bread machine banana bread is quick and easy to make using the Dough setting for mixing, 
