--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,7 +9,7 @@
     <!-- Content from: https://www.allrecipes.com/recipe/19344/homemade-lasagna/ -->
     <h1>Lasagna</h1>
     <p><a href="https://www.allrecipes.com/recipe/19344/homemade-lasagna/" target="_blank" rel="noopener norefferer">original recipe content here</a> - credit to CRAIG for original recipe</p>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F10%2F31%2FHomemade-Lasagna-lutzflcat-1x1-1-2000.jpg&q=60&c=sc&poi=auto&orient=true&h=512" width="500">
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F10%2F31%2FHomemade-Lasagna-lutzflcat-1x1-1-2000.jpg&q=60&c=sc&poi=auto&orient=true&h=512" width="500" alt="a hearty lasagna with oozing cheese ready to be eaten">
     <h2>Description</h2>
     <p>
         This is my mom's special homemade lasagna recipe with a meaty, 
