--- a/recipes/choc_almond_breakfast_donuts.html
+++ b/recipes/choc_almond_breakfast_donuts.html
@@ -9,7 +9,7 @@
     <!-- Content from: https://www.allrecipes.com/recipe/283627/chocolate-almond-breakfast-donuts/ -->
     <h1>Choc Almond Breakfast Donuts</h1>
     <p><a href="https://www.allrecipes.com/recipe/283627/chocolate-almond-breakfast-donuts/" target="_blank" rel="noopener norefferer">original recipe content here</a> - credit to John Mitzewich for original recipe</p>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2021%2F11%2F04%2Fimage-181.jpg&q=60&c=sc&poi=auto&orient=true&h=512" width="500">
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2021%2F11%2F04%2Fimage-181.jpg&q=60&c=sc&poi=auto&orient=true&h=512" width="500" alt="six delicious iced donuts decorately differently sitting on a cooling rack">
     <h2>Description</h2>
     <p>
         I'm showing you how to make gluten-free, grain-free, low-carb, high-protein donuts 
