Put links in index.html into unordered list
Previously links were nested in <p> tags to place
them on seperate lines. The correct way to list
recipes would be in an unordered list. Now that
links are in <ul> tags as list items they are
properly formatted.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <p><a href="./recipes/lasagna.html">Lasagna</a></p>
-        <p><a href="./recipes/choc_almond_breakfast_donuts.html">Choc Almond Breakfast Donuts</a></p>
-        <p><a href="./recipes/banana_bread.html">Banana Bread</a></p>
+        <ul>
+            <a href="./recipes/lasagna.html">Lasagna</a>
+            <a href="./recipes/choc_almond_breakfast_donuts.html">Choc Almond Breakfast Donuts</a>
+            <a href="./recipes/banana_bread.html">Banana Bread</a>
+        </ul>
     </body>
 </html>
