Add list item elements not included in last push
Forgot to add <li> tags in the last push.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <a href="./recipes/lasagna.html">Lasagna</a>
-            <a href="./recipes/choc_almond_breakfast_donuts.html">Choc Almond Breakfast Donuts</a>
-            <a href="./recipes/banana_bread.html">Banana Bread</a>
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/choc_almond_breakfast_donuts.html">Choc Almond Breakfast Donuts</a></li>
+            <li><a href="./recipes/banana_bread.html">Banana Bread</a></li>
         </ul>
     </body>
 </html>
