Add css directory and link style.css to pages

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <!-- Content from: https://www.allrecipes.com/recipe/19344/homemade-lasagna/ -->
