--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="./recipes/choc_almond_breakfast_donuts.html">Choc Almond Breakfast Donuts</a></li>
-            <li><a href="./recipes/banana_bread.html">Banana Bread</a></li>
-        </ul>
+        <div id="recipe-nav-container">
+            <ul>
+                <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+                <li><a href="./recipes/choc_almond_breakfast_donuts.html">Choc Almond Breakfast Donuts</a></li>
+                <li><a href="./recipes/banana_bread.html">Banana Bread</a></li>
+            </ul>
+        </div>
     </body>
 </html>
