--- a/recipes/banana_bread.html
+++ b/recipes/banana_bread.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Bread</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <!-- Content from: https://www.allrecipes.com/recipe/7116/banana-bread-quick-bread-for-machines/ -->
