--- a/recipes/choc_almond_breakfast_donuts.html
+++ b/recipes/choc_almond_breakfast_donuts.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Choc Almond Breakfast Donuts</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <!-- Content from: https://www.allrecipes.com/recipe/283627/chocolate-almond-breakfast-donuts/ -->
