Add TOP learnings to style.css margins and padding

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <p>A learning project from The Odin Project<span class="block">Layout by Wade</span></p>
         <div id="recipe-nav-container">
             <ul>
                 <li><a href="./recipes/lasagna.html">Lasagna</a></li>
